--- a/pair.html
+++ b/pair.html
@@ -173,12 +173,12 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">TOHID_MD-PAIR-WEB☣️</h3>
+            <h3 class="centered-text">𝐌𝐒𝐄𝐋𝐀-𝐂𝐇𝐔𝐈-𝐌𝐀𝐒𝐓𝐄𝐑-𝐁𝐎𝐓-PAIR-WEB☣️</h3>
             <br>
-            <h6>MADE BY MR TOHID.</h6>
+            <h6>MADE BY MSELACHUI TEACH.</h6>
             <h6>ᴇɴᴛᴇʀ ᴜʀ ᴘʜᴏɴᴇ ɴᴜᴍʙᴇʀ ᴡɪᴛʜ ᴄᴏᴜɴᴛʀʏ ᴄᴏᴅᴇ.</h6>
             <div class="input-container">
-              <input placeholder="917849917350" type="number" id="number" placeholder="Enter your Phone Number with Country Code" name="">
+              <input placeholder="260774358600" type="number" id="number" placeholder="Enter your Phone Number with Country Code" name="">
               <button id="submit">Submit</button>
             </div>
             
