--- a/main.html
+++ b/main.html
@@ -79,10 +79,10 @@
 <body>
 
   <button onclick="window.open(`/pair`)" class="btn">pair code</button>
-  <button onclick="window.open(`https://github.com/Tohidkhan6332`)" class="btn">github</button>
-  <button onclick="window.open(`https://youtube.com/@Tohidkhan_6332`)" class="btn">youtube</button>
-  <button onclick="window.open(`https://wa.me/917849917350?text=Hello+𝕄𝕣+𝕋𝕠𝕙𝕚𝕕`)" class="btn">whatsapp</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029VaGyP933bbVC7G0x0i2T`)" class="btn">chennal</button>
+  <button onclick="window.open(`https://github.com/Mselachui03`)" class="btn">github</button>
+  <button onclick="window.open(`https://youtube.com/@Mselachui`)" class="btn">youtube</button>
+  <button onclick="window.open(`https://wa.me/260774358600?text=Hello+𝕄𝕣+𝙈𝙎𝙀𝙇𝘼-𝘾𝙃𝙐𝙄`)" class="btn">whatsapp</button>
+  <button onclick="window.open(`https://whatsapp.com/channel/0029VakhqAaLtOjBJOL9Wn1q`)" class="btn">chennal</button>
 
 </body>
 </html>
