--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-image: url("https://i.ibb.co/QcP3Byh/ccb5e017f3895c328123f0b95ee2b9ec.jpg"); /* Set the background image */
+      background-image: url("https://i.imgur.com/xrtdtOn.jpeg"); /* Set the background image */
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
@@ -81,8 +81,9 @@
   <button onclick="window.open(`/pair`)" class="btn">pair code</button>
   <button onclick="window.open(`https://github.com/Mselachui03`)" class="btn">github</button>
   <button onclick="window.open(`https://youtube.com/@Mselachui`)" class="btn">youtube</button>
-  <button onclick="window.open(`https://wa.me/260774358600?text=Hello+𝕄𝕣+𝙈𝙎𝙀𝙇𝘼-𝘾𝙃𝙐𝙄`)" class="btn">whatsapp</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029VakhqAaLtOjBJOL9Wn1q`)" class="btn">chennal</button>
-
+  <button onclick="window.open(`https://wa.me/260774358600?text=Hello+𝕄𝕣+𝙈𝙎𝙀𝙇𝘼-𝘾𝙃𝙐𝙄`)" class="btn">owner</button>
+  <button onclick="window.open(`https://whatsapp.com/channel/0029VakhqAaLtOjBJOL9Wn1q`)" class="btn">channel</button>
+  <button onclick="window.open(`https://chat.whatsapp.com/Bqb6oEUxAneAqxBUBfNdLr`)" class="btn">group</button>
+  
 </body>
 </html>
