--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-image: url("https://i.imgur.com/xrtdtOn.jpeg"); /* Set the background image */
+      background-image: url("https://files.catbox.moe/bz7qwz.jpg"); /* Set the background image */
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
