--- a/pair.html
+++ b/pair.html
@@ -142,11 +142,11 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">© Tohidkhan6332</h3>
+            <h3 class="centered-text">© Mselachui03</h3>
             <br>
             <h6>Enter your number with a country code.</h6>
             <div class="input-container">
-              <input placeholder="917849917350" type="number" id="number" placeholder="Enter your phone number with a country code" name="">
+              <input placeholder="260774358600" type="number" id="number" placeholder="Enter your phone number with a country code" name="">
               <button id="submit">Submit</button>
             </div>
             
