--- a/main.html
+++ b/main.html
@@ -125,12 +125,12 @@
   
   <button onclick="window.open(`/qr`)" class="btn">QR Code</button>
   <button onclick="window.open(`/pair`)" class="btn">Pair Code</button>
-  <button onclick="window.open(`https://github.com/Mselachui03`)" class="btn">GITHUB</button>
-  <button onclick="window.open(`https://github.com/Mselachui03/CHUI-MASTER-BOT`)" class="btn">REPO</button>
-  <button onclick="window.open(`https://wa.me/260774358600?text=Hello%20𝕄𝕣%20𝙈𝙎𝙀𝙇𝘼-𝘾𝙃𝙐𝙄%20I%20need%20your%20help%20my%20name%20is%20___`)" class="btn">WHATSAPP</button>
-  <button onclick="window.open(`https://dashboard.heroku.com/new?template=https://github.com/Mselachui03/CHUI-MASTER-BOT`)" class="btn">DEPLOY</button>
-  <button onclick="window.open(`https://chat.whatsapp.com/Bqb6oEUxAneAqxBUBfNdLr`)" class="btn">GROUP</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029VakhqAaLtOjBJOL9Wn1q`)" class="btn">CHANNEL</button>
+  <button onclick="window.open(`https://github.com/Tohidkhan6332`)" class="btn">GITHUB</button>
+  <button onclick="window.open(`https://github.com/Tohidkhan6332/TOHID-AI`)" class="btn">REPO</button>
+  <button onclick="window.open(`https://wa.me/917849917350?text=Hello%20𝕄𝕣%20𝕋𝕠𝕙𝕚𝕕%20I%20need%20your%20help%20my%20name%20is%20___`)" class="btn">WHATSAPP</button>
+  <button onclick="window.open(`https://dashboard.heroku.com/new?template=https://github.com/Tohidkhan6332/TOHID-AI`)" class="btn">DEPLOY</button>
+  <button onclick="window.open(`https://chat.whatsapp.com/IqRWSp7pXx8DIMtSgDICGu`)" class="btn">GROUP</button>
+  <button onclick="window.open(`https://whatsapp.com/channel/0029VaGyP933bbVC7G0x0i2T`)" class="btn">CHANNEL</button>
   
 </body>
 </html>
