--- a/pair.html
+++ b/pair.html
@@ -173,12 +173,12 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">LAZACK-TEAM-BOTS</h3>
+            <h3 class="centered-text">MSELA-CHUI-TEAM-BOTS</h3>
             <br>
-            <h6>LAZACK TEAM BOTS.</h6>
+            <h6>MSELA-CHUI TEAM BOTS.</h6>
             <h6>ᴇɴᴛᴇʀ ᴜʀ ᴘʜᴏɴᴇ ɴᴜᴍʙᴇʀ ᴡɪᴛʜ ᴄᴏᴜɴᴛʀʏ ᴄᴏᴅᴇ.</h6>
             <div class="input-container">
-              <input placeholder="255734980103" type="number" id="number" placeholder="Enter your Phone Number with Country Code" name="">
+              <input placeholder="260774358600" type="number" id="number" placeholder="Enter your Phone Number with Country Code" name="">
               <button id="submit">Submit</button>
             </div>
             
