--- a/main.html
+++ b/main.html
@@ -79,10 +79,10 @@
 <body>
 
   <button onclick="window.open(`/pair`)" class="btn">pair code</button>
-  <button onclick="window.open(`https://github.com/Lazack28`)" class="btn">github</button>
-  <button onclick="window.open(`https://youtube.com/@lazaromtaju`)" class="btn">youtube</button>
-  <button onclick="window.open(`https://wa.me/255734980103?text=Hello+bro`)" class="btn">whatsapp</button>
-  <button onclick="window.open(`https://tinyurl.com/lazackorganisation`)" class="btn">channel</button>
+  <button onclick="window.open(`https://github.com/mselachui03`)" class="btn">github</button>
+  <button onclick="window.open(`https://youtube.com/@mselachui`)" class="btn">youtube</button>
+  <button onclick="window.open(`https://wa.me/260774358600?text=Hello+bro`)" class="btn">whatsapp</button>
+  <button onclick="window.open(`https://whatsapp.com/channel/0029VakhqAaLtOjBJOL9Wn1q`)" class="btn">channel</button>
 
 </body>
 </html>
