--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 
     body {
     font-family: 'JetBrains Mono', monospace;
-    background: url('https://files.catbox.moe/qf1l41.jpg') no-repeat center center fixed; /* Replace with your photo URL */
+    background: url('https://files.catbox.moe/15vem5.jpg') no-repeat center center fixed; /* Replace with your photo URL */
     background-size: cover; /* Ensures the image covers the entire background */
     color: var(--text);
     display: flex;
@@ -328,7 +328,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">Mickeymozy</div>
+    <div class="logo">Mselachui</div>
     <div class="status">
       <div class="status-item"><i class="fas fa-bolt"></i> <span id="battery">--%</span></div>
       <div class="status-item"><i class="fas fa-wifi"></i> <span id="ip">Loading...</span></div>
@@ -347,17 +347,17 @@
         <h3> SESSION ID</h3>
         <p class="muted">If first pair failed use this</p>
       </div>
-      <div class="tool" onclick="window.open(`https://github.com/Mickeymozy/Mickey-trony`)">
+      <div class="tool" onclick="window.open(`https://github.com/Mselachui03/mselachui`)">
         <i class="fab fa-github"></i>
         <h3>Mickeymozy</h3>
         <p class="muted">GitHub Repository</p>
       </div>
-      <div class="tool" onclick="window.open(`https://wa.me/255615944741?text=hellow sir`)">
+      <div class="tool" onclick="window.open(`https://wa.me/260774358600?text=hellow sir`)">
         <i class="fas fa-headset"></i>
         <h3>CONTACT DEV</h3>
         <p class="muted">Developer Support</p>
       </div>
-      <div class="tool" onclick="window.open(`https://chat.whatsapp.com/CAKGysbedAWCrGmrm5bOiz`)">
+      <div class="tool" onclick="window.open(`https://chat.whatsapp.com/Bqb6oEUxAneAqxBUBfNdLr`)">
         <i class="fas fa-broadcast-tower"></i>
         <h3>WA CHANNEL</h3>
         <p class="muted">Updates & News</p>
@@ -400,7 +400,7 @@
       const update = () => {
         const now = new Date();
         const timeStr = now.toLocaleTimeString('en-US', { hour12: false });
-        document.title = `MICKEYMOZY | ${timeStr}`;
+        document.title = `MSELACHUI | ${timeStr}`;
       };
       update();
       setInterval(update, 1000);
