--- a/pair.html
+++ b/pair.html
@@ -133,13 +133,13 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">PRINCE XMD PAIR</h3>
+            <h3 class="centered-text">𝐌𝐒𝐄𝐋𝐀-𝐂𝐇𝐔𝐈-𝐁𝐎𝐓 PAIR</h3>
             <br>
             <h2>Enter Your Number</h2>
-            <h4>POWERED BY PRINCE XMD</h4>
+            <h4>POWERED BY 𝐌𝐒𝐄𝐋𝐀-𝐂𝐇𝐔𝐈-𝐁𝐎𝐓</h4>
             <br>
             <div class="input-container">
-              <input placeholder="917849917350" type="number" id="number" placeholder="Please Enter Your Number" name="">
+              <input placeholder="26077355624" type="number" id="number" placeholder="Please Enter Your Number" name="">
               <button id="submit">enter</button>
             </div>
                     <a id="waiting-message" class="centered-text" style="display: none;">in process...</a>
