--- a/home.html
+++ b/home.html
@@ -80,14 +80,14 @@
 </head>
 <body>
 
-  <button onclick="window.open(`https://github.com/PRINCETECH19/PRINCE-XMD`)" class="btn">GITHUB</button>
+  <button onclick="window.open(`https://github.com/Mselachui03/MSELA-CHUI-BOT`)" class="btn">GITHUB</button>
   <button onclick="window.open(`/pair`)" class="btn">Pair</button>
-  <button onclick="window.open(`https://github.com/PRINCETECH19/PRINCE-XMD`)" class="btn">REPO</button>
-  <button onclick="window.open(`https://wa.me/255623672733?text=Hello%20prince%20%20tech%20need%20your%20help%20my%20name%20is%20___`)" class="btn">WHATSAPP</button>
-  <button onclick="window.open(`https://dashboard.heroku.com/new?template=https://github.com/PRINCETECH19/PRINCE-XMD`)" class="btn">DEPLOY</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029Vb6B9xFCxoAseuG1g610https://whatsapp.com/channel/0029Vb6B9xFCxoAseuG1g610`)" class="btn">GROUP</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029Vb6B9xFCxoAseuG1g610`)" class="btn">CHANNEL</button>
-  <button onclick="window.open(`https://github.com/PRINCETECH19/PRINCE-XMD/EXTERNAL-PLUGINS`)" class="btn">Plugins</button>
+  <button onclick="window.open(`https://github.com/Mselachui03/MSELA-CHUI-BOT`)" class="btn">REPO</button>
+  <button onclick="window.open(`https://wa.me/260774358600?text=Hello%20𝐌𝐒𝐄𝐋𝐀-𝐂𝐇𝐔𝐈-𝐓EACH%20%20tech%20need%20your%20help%20my%20name%20is%20___`)" class="btn">WHATSAPP</button>
+  <button onclick="window.open(`https://dashboard.heroku.com/new?template=https://github.com/Mselachui03/MSELA-CHUI-BOT`)" class="btn">DEPLOY</button>
+  <button onclick="window.open(`https://whatsapp.com/channel/0029VakhqAaLtOjBJOL9Wn1qhttps://whatsapp.com/channel/0029VakhqAaLtOjBJOL9Wn1q`)" class="btn">GROUP</button>
+  <button onclick="window.open(`https://whatsapp.com/channel/0029VakhqAaLtOjBJOL9Wn1q`)" class="btn">CHANNEL</button>
+  <button onclick="window.open(`https://github.com/Mselachui03/MSELA-CHUI-BOT/EXTERNAL-PLUGINS`)" class="btn">Plugins</button>
 
 </body>
 </html>
