--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-image: url("https://files.catbox.moe/v2fbec.jpeg"); /* Set the background image */
+      background-image: url("https://files.catbox.moe/15vem5.jpg"); /* Set the background image */
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
