--- a/public/pair.html
+++ b/public/pair.html
@@ -1,207 +1,183 @@
-
-
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
   <meta charset="UTF-8">
+
+  <title>𝐌𝐒𝐄𝐋𝐀-𝐂𝐇𝐔𝐈-𝐁𝐎𝐓 SESSION</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PRINCE XMD</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
   <style>
+
     body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      overflow: hidden; /* Hide overflow to prevent scrollbars */
-      font-family: Arial, sans-serif;
-      background-size: cover;
-      animation: changeBackground 15s infinite;
-    }
 
-    @keyframes changeBackground {
-      10%, 100% { background-image: url('https://wallpapercave.com/wp/wp3764268.jpg'); }
-      25% { background-image: url('https://wallpapercave.com/uwp/uwp4398200.webp'); }
-      50% { background-image: url('https://wallpapercave.com/wp/KEwaPYO.jpg'); }
-      75% { background-image: url('https://wallpapercave.com/uwp/uwp4403209.jpeg'); }
-    }
-
-    .container {
       display: flex;
+
       flex-direction: column;
+
       align-items: center;
-      z-index: 1; /* Ensure content is above clouds */
+
+      justify-content: center;
+
+      height: 100vh;
+
+      margin: 0;
+
+      background-image: url("https://files.catbox.moe/15vem5.jpg"); /* Set the background image */
+
+      background-repeat: no-repeat;
+
+      background-position: center;
+
+      background-size: cover;
+
     }
 
-    .box {
-      width: 300px;
-      height: 330px;
-      padding: 20px;
+    
+
+    .btn {
+
+      --color: rgb(238,130,238);
+
+      --color2: #0E0E0E;
+
+      width: 200px;
+
+      padding: 0.8em 1.75em;
+
+      background-color: transparent;
+
+      border-radius: 6px;
+
+      border: .3px solid var(--color);
+
+      transition: .5s;
+
       position: relative;
-      text-align: center;
-      background-color: rgba(255,255,255,0.5);
-      border-radius: 10px;
-      transform: perspective(1000px) rotateY(0deg);
-      box-shadow: none; /* Removed box shadow */
-      position: relative;
-    }
 
-    #text {
-      color: #000; /* Set the text color to black (#000) */
-    }
+      overflow: hidden;
 
-    .input-container input {
-      color: #000; /* Set the text color to black (#000) */
-    }
+      cursor: pointer;
 
-    .centered-text {
-      color: #000; /* Set the text color to black (#000) */
-    }
+      z-index: 1;
 
-    .input-container {
-      display: flex;
-      background: white;
-      border-radius: 1rem;
-      background: linear-gradient(45deg, #c5c5c5 0%, #ffffff 100%);
-      padding: 0.3rem;
-      gap: 0.3rem;
-      max-width: 300px; /* Set your desired maximum width */
-      width: 100%;
-    }
+      font-weight: 300;
 
-    .input-container input {
-      border-radius: 0.8rem 0 0 0.8rem;
-      background: #e8e8e8;
-      width: 89%;
-      flex-basis: 75%;
-      padding: 1rem;
-      border: none;
-      border-left: 2px solid #ff9d9d;
-      color: #5e5e5e;
-      transition: all 0.2s ease-in-out;
-    }
+      font-size: 17px;
 
-    .input-container input:focus {
-      border-left: 2px solid #ff9d9d;
-      outline: none;
-    }
+      font-family: 'Roboto', 'Segoe UI', sans-serif;
 
-    .input-container button {
-      flex-basis: 25%;
-      padding: 1rem;
-      background: linear-gradient(135deg, #8a2be2 0%, #800080 100%); /* Purple background */
-      font-weight: 900;
-      letter-spacing: 0.3rem;
       text-transform: uppercase;
-      color: white;
-      border: none;
+
+      color: var(--color);
+
+      margin-bottom: 24px;
+
+    }
+
+
+
+    .btn::after, .btn::before {
+
+      content: '';
+
+      display: block;
+
+      height: 100%;
+
       width: 100%;
-      border-radius: 0 1rem 1rem 0;
-      transition: all 0.2s ease-in-out;
+
+      transform: skew(90deg) translate(-50%, -50%);
+
+      position: absolute;
+
+      inset: 50%;
+
+      left: 25%;
+
+      z-index: -1;
+
+      transition: .5s ease-out;
+
+      background-color: var(--color);
+
     }
 
-    .input-container button:hover {
-      background: linear-gradient(135deg, #A8E4A0 0%, #32CD32 100%);
-      color: red; /* Change text color on hover to red */
+
+
+    .btn::before {
+
+      top: -50%;
+
+      left: -25%;
+
+      transform: skew(90deg) rotate(180deg) translate(-50%, -50%);
+
     }
 
-    @media (max-width: 500px) {
-      .input-container {
-        flex-direction: column;
-      }
 
-      .input-container input {
-        border-radius: 0.8rem;
-      }
 
-      .input-container button {
-        padding: 1rem;
-        border-radius: 0.8rem;
-      }
+    .btn:hover::before {
+
+      transform: skew(45deg) rotate(180deg) translate(-50%, -50%);
+
     }
 
-    .centered-text {
-      text-align: center;
+
+
+    .btn:hover::after {
+
+      transform: skew(45deg) translate(-50%, -50%);
+
     }
+
+
+
+    .btn:hover {
+
+      color: var(--color2);
+
+    }
+
+
+
+    .btn:active {
+
+      filter: brightness(.7);
+
+      transform: scale(.98);
+
+    }
+
   </style>
+
 </head>
+
 <body>
-  <div class="container">
-    <div class="main">
-      <div class="box" id="box">
-        <div id="text">
-          <i class="fa fa-user"></i>
-          <p>
-            <h3 class="centered-text">PRINCE XMD PAIR</h3>
-            <br>
-            <h2>Enter Your Number</h2>
-            <h4>POWERED BY PRINCE XMD</h4>
-            <br>
-            <div class="input-container">
-              <input placeholder="917849917350" type="number" id="number" placeholder="Please Enter Your Number" name="">
-              <button id="submit">enter</button>
-            </div>
-                    <a id="waiting-message" class="centered-text" style="display: none;">in process...</a>
-            <br>
-            <br>
-            <main id="pair"></main>
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
-  <script>
-    let a = document.getElementById("pair");
-    let b = document.getElementById("submit");
-    let c = document.getElementById("number");
-    let box = document.getElementById("box");
 
-    async function Copy() {
-      let text = document.getElementById("copy").innerText;
-      let obj = document.getElementById("copy");
-      await navigator.clipboard.writeText(obj.innerText.replace('CODE: ', ''));
-      obj.innerText = "COPIED";
-      obj.style = "color:blue;font-weight:bold";
-      obj.size = "5";
-      setTimeout(() => {
-        obj.innerText = text;
-        obj.style = "color:black;font-weight-bold";
-        obj.size = "5";
-      }, 500);
-    }
 
-    b.addEventListener("click", async (e) => {
-      e.preventDefault();
-      if (!c.value) {
-        a.innerHTML = '<a style="color:black;font-weight:bold">Please Enter Your Number</a><br><br>';
-      } else if (c.value.replace(/[^0-9]/g, "").length < 11) {
-        a.innerHTML = '<a style="color:black;font-weight:bold">Please Give Valid Number</a><br><br>';
-      } else {
-        const bc = c.value.replace(/[^0-9]/g, "");
-        let bb = "";
-        let bbc = "";
-        const cc = bc.split('');
-        cc.map(a => {
-          bbc += a;
-          if (bbc.length == 3) {
-            bb += " " + a;
-          } else if (bbc.length == 8) {
-            bb += " " + a;
-          } else {
-            bb += a;
-          }
-        });
-        c.type = "text";
-        c.value = "+" + bb;
-        c.style = "color:black;font-size:20px";
-        a.innerHTML = '<a style="color:black;font-weight:bold">Please Wait</a><br><br>';
-        let { data } = await axios(`/code?number=${bc}`);
-        let code = data.code || "Service Unavailable";
-        a.innerHTML = '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:black;font-weight:bold">' + code + '</span></font><br><br><br>';
-      }
-    });
-  </script>
+
+  <button onclick="window.open(`https://github.com/Mselachui03/MSELA-CHUI-BOT`)" class="btn">GITHUB</button>
+
+  <button onclick="window.open(`/pair`)" class="btn">Pair</button>
+
+  <button onclick="window.open(`https://github.com/Mselachui03/MSELA-CHUI-BOT`)" class="btn">REPO</button>
+
+  <button onclick="window.open(`https://wa.me/260774358600?text=Hello%20𝐌𝐒𝐄𝐋𝐀-𝐂𝐇𝐔𝐈-𝐓EACH%20%20tech%20need%20your%20help%20my%20name%20is%20___`)" class="btn">WHATSAPP</button>
+
+  <button onclick="window.open(`https://dashboard.heroku.com/new?template=https://github.com/Mselachui03/MSELA-CHUI-BOT`)" class="btn">DEPLOY</button>
+
+  <button onclick="window.open(`https://whatsapp.com/channel/0029VakhqAaLtOjBJOL9Wn1qhttps://whatsapp.com/channel/0029VakhqAaLtOjBJOL9Wn1q`)" class="btn">GROUP</button>
+
+  <button onclick="window.open(`https://whatsapp.com/channel/0029VakhqAaLtOjBJOL9Wn1q`)" class="btn">CHANNEL</button>
+
+  <button onclick="window.open(`https://github.com/Mselachui03/MSELA-CHUI-BOT/EXTERNAL-PLUGINS`)" class="btn">Plugins</button>
+
+
+
 </body>
+
 </html>
